--- a/ReservaSala/app/src/main/res/layout/content_main.xml
+++ b/ReservaSala/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
     android:layout_marginBottom="16dp"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="info.tadeuti.reservasala.MainActivity"
+    tools:context="info.tadeuti.reservasala.ACTIVITY.MainActivity"
     tools:showIn="@layout/app_bar_main"
     android:weightSum="1">
 
@@ -22,16 +22,16 @@
         android:text="PAGINA INICIAL"
         android:textSize="25sp" />
 
-<ImageView
+    <Button
+        android:id="@+id/btnFazerLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Fazer Login" />
+
+    <ImageView
     android:layout_width="match_parent"
-    android:layout_height="557dp"
+    android:layout_height="450dp"
     android:layout_marginTop="20dp"
-    android:src="@drawable/salaReuniao"
-    android:layout_weight="0.52" />
-<Button
-    android:id="@+id/fazerLogin"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Fazer Login"/>
+    android:src="@drawable/salareuniao" />
 
 </LinearLayout>
