--- a/ReservaSala/app/src/main/res/layout/activity_login.xml
+++ b/ReservaSala/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     android:layout_marginLeft="16dp"
     android:layout_marginBottom="16dp"
     android:gravity="center"
-    tools:context="info.tadeuti.reservasala.LoginActivity">
+    tools:context="info.tadeuti.reservasala.ACTIVITY.LoginActivity">
 
     <EditText
         android:id="@+id/editEmail"
