--- a/ReservaSala/app/src/main/res/layout/activity_cadastro.xml
+++ b/ReservaSala/app/src/main/res/layout/activity_cadastro.xml
@@ -20,33 +20,32 @@
                 android:id="@+id/editCadNome"
                 android:layout_width="343dp"
                 android:layout_height="wrap_content"
-                android:hint="Nome"/>
-                android:inputType="textCapCharacters"
+                android:hint="Nome"
+                android:inputType="textCapCharacters"/>
             <EditText
                 android:id="@+id/editCadCargo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Cargo"/>
-                android:inputType="textCapCharacters"
+                android:hint="Cargo"
+                android:inputType="textCapCharacters"/>
             <EditText
                 android:id="@+id/editCadEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="E-mail"
-                android:inputType="textEmailAddress"
-                />
+                android:inputType="textEmailAddress"/>
             <EditText
                 android:id="@+id/editCadSenha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Senha"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"/>
             <EditText
                 android:id="@+id/editCadConfirmarSenha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Confirmar Senha"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"/>
             <RadioGroup
                 android:id="@+id/rgSexo"
                 android:orientation="horizontal"
@@ -78,7 +77,6 @@
 
 
         </LinearLayout>
-
 
     </ScrollView>
 
