--- a/ReservaSala/app/src/main/res/layout/activity_principal.xml
+++ b/ReservaSala/app/src/main/res/layout/activity_principal.xml
@@ -12,9 +12,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="35sp"
+        android:textSize="25sp"
         android:textStyle="bold"
-        android:text="TELA PRINCIPAL"
+        android:text="MENU PRINCIPAL"
+        />
+
+    <Button
+        android:id="@+id/btnCadastrarSala"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="cadastrar salas"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="reservar sala"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="visualizar reservas"
         />
 
 </LinearLayout>
